# minibase

./: CMakeLists.txt  readme.md
src/: Main.cpp  Support.hpp
src/db/: Data.hpp  Database.hpp  DbAction.cpp  DbAction.hpp
src/db/fs/: DbFsHandle.cpp  DbFsHandle.hpp
src/io/: stdout.cpp  stdout.hpp
